* Makefile.am: Define ffitest_OBJECTS. 	* Makefile.in: Rebuilt.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@50903 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_1-branch/libffi/Makefile.am
+++ b/gcc-3_1-branch/libffi/Makefile.am
@@ -87,7 +87,7 @@ noinst_LTLIBRARIES = libffi_convenience.la
 
 noinst_PROGRAMS = ffitest
 
-ffitest_SOURCES = src/ffitest.c
+ffitest_OBJECTS = ffitest.lo
 ffitest_LDADD = libffi.la
 ffitest_LDFLAGS = -shared-libgcc
 
