* java/lang/natSystem.cc (init_properties): Update VM version 	properties. 	* configure.in: Set GCJVERSION. 	* acconfig.h: Add GCJVERSION. 	* configure: Rebuilt. 	* include/config.h.in: Rebuilt.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@50944 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/configure.in
+++ b/libjava/configure.in
@@ -747,6 +747,14 @@ AC_SUBST(GCC_UNWIND_INCLUDE)
 
 AC_SUBST(AM_RUNTESTFLAGS)
 
+# Determine gcj version number.
+changequote(<<,>>)
+gcjversion=`$GCJ -v 2>&1 | sed -n 's/^.*version \([^ ]*\).*$/\1/p'`
+changequote([,])
+GCJVERSION=$gcjversion
+AC_SUBST(GCJVERSION)
+AC_DEFINE_UNQUOTED(GCJVERSION, "$GCJVERSION", [Short GCJ version ID])
+
 dnl Work around a g++ bug.  Reported to gcc-bugs@gcc.gnu.org on Jan 22, 2000.
 AC_MSG_CHECKING([for g++ -ffloat-store bug])
 save_CFLAGS="$CFLAGS"
