* Makefile.in (unroll-new.o): New. 	* basic-block.h (create_preheaders, create_preheader): Declaration 	changed. 	* cfgloopanal.c (create_preheaders, create_preheader): Modified to use 	flags. 	* loop-new.c (duplicate_loop_to_header_edge, can_duplicate_loop_p, 	expected_loop_iterations): Made global. 	(loop_optimizer_init): Create preheaders after cfglayout. 	(try_remove_path): Fixed a stupid bug. 	(duplicate_loop_to_header_edge): Modified to use flags. 	* loop.h (struct loop_desc): Description of simple loop. 	(expected_loop_iterations, can_duplicate_loop_p, 	duplicate_loop_to_header_edge): Declare. 	* params.def (MAX_UNROLLED_INSNS, MAX_UNROLL_TIMES, 	MAX_PEELED_INSNS, MAX_PEEL_TIMES): New options. 	* toplev.c (flag_new_unroll_loops, flag_new_unroll_all_loops, 	flag_peel_loops): New flags. 	(rest_of_compilation): Enable new loop peeling and unrolling. 	* unroll-new.c: New file. 	(simple_exit, simple_condition_p, simple_increment, 	variable_initial_value, simple_loop_p): New, simple loop recognition. 	(count_loop_iterations, unroll_loop_constant_iterations, 	unroll_loop_runtime_iterations, unroll_simple_loop): Simple loop 	unrolling. 	(unroll_loop_new, unroll_loops): Loop unrolling. 	(peel_loop, peel_loops): Loop peeling.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@51001 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/cfg-branch/gcc/ChangeLog.cfg
+++ b/cfg-branch/gcc/ChangeLog.cfg
@@ -1,3 +1,32 @@
+Mon Mar 18 21:14:24 CET 2002  Zdenek Dvorak  <rakdver@atrey.karlin.mff.cuni.cz>
+
+	* Makefile.in (unroll-new.o): New.
+	* basic-block.h (create_preheaders, create_preheader): Declaration
+	changed.
+	* cfgloopanal.c (create_preheaders, create_preheader): Modified to use
+	flags.
+	* loop-new.c (duplicate_loop_to_header_edge, can_duplicate_loop_p,
+	expected_loop_iterations): Made global.
+	(loop_optimizer_init): Create preheaders after cfglayout.
+	(try_remove_path): Fixed a stupid bug.
+	(duplicate_loop_to_header_edge): Modified to use flags.
+	* loop.h (struct loop_desc): Description of simple loop.
+	(expected_loop_iterations, can_duplicate_loop_p,
+	duplicate_loop_to_header_edge): Declare.
+	* params.def (MAX_UNROLLED_INSNS, MAX_UNROLL_TIMES,
+	MAX_PEELED_INSNS, MAX_PEEL_TIMES): New options.
+	* toplev.c (flag_new_unroll_loops, flag_new_unroll_all_loops,
+	flag_peel_loops): New flags.
+	(rest_of_compilation): Enable new loop peeling and unrolling.
+	* unroll-new.c: New file.
+	(simple_exit, simple_condition_p, simple_increment,
+	variable_initial_value, simple_loop_p): New, simple loop recognition.
+	(count_loop_iterations, unroll_loop_constant_iterations,
+	unroll_loop_runtime_iterations, unroll_simple_loop): Simple loop
+	unrolling.
+	(unroll_loop_new, unroll_loops): Loop unrolling.
+	(peel_loop, peel_loops): Loop peeling.
+
 Sat Mar 16 13:09:57 CET 2002  Jan Hubicka  <jh@suse.cz>
 
 	* cfgcleanup.c (cleanup_cfg): Fix updating of liveness.
