Enable libgcj for xscale-elf
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@51140 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_1-branch/configure.in
+++ b/gcc-3_1-branch/configure.in
@@ -725,7 +725,7 @@ case "${target}" in
     fi
     ;;
   xscale-*-elf)
-    noconfigdirs="$noconfigdirs target-libgloss ${libgcj}"
+    noconfigdirs="$noconfigdirs target-libgloss target-libffi target-qthreads"
     if [ x${is_cross_compiler} != xno ] ; then
 	   target_configdirs="${target_configdirs} target-bsp target-cygmon"
     fi
