--- a/cfg-branch/gcc/ChangeLog.cfg
+++ b/cfg-branch/gcc/ChangeLog.cfg
@@ -1,3 +1,13 @@
+2002-03-22  Daniel Berlin  <dan@dberlin.org>
+
+	* unroll-new.c (unroll_loop_constant_iterations): Print out
+	reasons for not unrolling/if we unrolled succesfully, to
+	rtl_dump_file.
+	(unroll_loop_runtime_iterations): Ditto.
+	(unroll_simple_loop): Ditto.
+	(peel_loop): Ditto for peeling.
+	* loop-new.c (unswitch_loop): Ditto for unswitching.
+
 Mon Mar 18 21:14:24 CET 2002  Zdenek Dvorak  <rakdver@atrey.karlin.mff.cuni.cz>
 
 	* Makefile.in (unroll-new.o): New.
