Fixes for PR bootstrap/3591, target/5676: * configure.in (mcore-pe): Disable the configuration of   libstdc++-v3 since exceptions are not supported. * config/mcore/mcore.h (CC1_SPEC): Define only if not already   defined.  Do not disable exceptions or rtti. * config/mcore/mcore-pe.h (CC1_SPEC): Define before including   mcore.h.  Disable exceptions and rtti, since they are not   supported by EPOC.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@51326 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/configure.in
+++ b/configure.in
@@ -866,6 +866,11 @@ case "${target}" in
 	   target_configdirs="${target_configdirs} target-bsp target-cygmon"
     fi
     ;;
+  mcore-*-pe*)
+  # The EPOC C++ environment does not support exceptions or rtti,
+  # and so building libstdc++-v3 tends not to always work.
+    noconfigdirs="$noconfigdirs target-libstdc++-v3"
+    ;;
   mmix-*-*)
     noconfigdirs="$noconfigdirs ${libgcj}"
     ;;
