--- a/gcc-3_1-branch/configure.in
+++ b/gcc-3_1-branch/configure.in
@@ -866,6 +866,11 @@ case "${target}" in
 	   target_configdirs="${target_configdirs} target-bsp target-cygmon"
     fi
     ;;
+  mcore-*-pe*)
+  # The EPOC C++ environment does not support exceptions or rtti,
+  # and so building libstdc++-v3 tends not to always work.
+    noconfigdirs="$noconfigdirs target-libstdc++-v3"
+    ;;
   mmix-*-*)
     noconfigdirs="$noconfigdirs ${libgcj}"
     ;;
