2002-03-22  Benjamin Kosnik  <bkoz@redhat.com>
	* acinclude.m4 (GLIBCPP_CHECK_COMPLEX_MATH_SUPP): Just test for
	signbit and __signbit directly.
	* aclocal.m4: Regenerate.
	* configure: Regenerate.
	* config.h.in: Regenerate.
	* libmath/Makefile.am: Simplify.
	* libmath/Makefile.in: Regenerate.
	* include/c_std/std_cmath.h: Update paths for include of cmath.tcc.

	* include/Makefile.am: Clean up handling of extra "C" header files.
	Add hooks for "C" compatibility headers.
	* include/Makefile.in: Regenerate.

	* include/c/*: Formatting tweaks, cleanups.
	* include/c_std/*: Same.

2002-03-21  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>

	* acinclude.m4 (GLIBCPP_CHECK_STDLIB_DECL_AND_LINKAGE_3): New.
	(GLIBCPP_CONFIGURE_TESTSUITE): Use it to check for setenv.
	* aclocal.m4: Regenerate.
	* configure: Likewise.

2002-03-19  Steve Ellcey  <sje@cup.hp.com>

	* acinclude.m4 (GLIBCPP_ENABLE_LIBUNWIND_EXCEPTIONS): Define
	GLIBCPP_ENABLE_LIBUNWIND_EXCEPTIONS to set LIBUNWIND_FLAG if
	--enable-libunwind-exceptions is set.
	* configure.in (GLIBCPP_ENABLE_LIBUNWIND_EXCEPTIONS): Call new
	macro to check for libunwind.
	* configure: Regenerate.
	* src/Makefile.am (libstdc___la_LDFLAGS): Add
	LIBUNWIND_FLAG to libstdc link line.
	* src/Makefile.in: Regenerate.

2002-03-18  Phil Edwards  <pme@gcc.gnu.org>

	* acinclude.m4 (GLIBCPP_CONFIGURE):  Make indentation/spacing uniform.
	* configure.in:  Add comments pointing the way for autoconf 2.5x.
	* aclocal.m4, config.h.in, configure:  Regenerate.


git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@51338 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_1-branch/libstdc++-v3/libio/Makefile.in
+++ b/gcc-3_1-branch/libstdc++-v3/libio/Makefile.in
@@ -106,6 +106,7 @@ LIBMATH_INCLUDES = @LIBMATH_INCLUDES@
 LIBSUPCXX_INCLUDES = @LIBSUPCXX_INCLUDES@
 LIBSUPCXX_PICFLAGS = @LIBSUPCXX_PICFLAGS@
 LIBTOOL = @LIBTOOL@
+LIBUNWIND_FLAG = @LIBUNWIND_FLAG@
 LN_S = @LN_S@
 MAINT = @MAINT@
 MAKEINFO = @MAKEINFO@
@@ -123,7 +124,6 @@ RANLIB = @RANLIB@
 SECTION_FLAGS = @SECTION_FLAGS@
 SECTION_LDFLAGS = @SECTION_LDFLAGS@
 STRIP = @STRIP@
-USE_COMPLEX_LONG_DOUBLE = @USE_COMPLEX_LONG_DOUBLE@
 USE_INCLUDED_LIBINTL = @USE_INCLUDED_LIBINTL@
 USE_NLS = @USE_NLS@
 VERSION = @VERSION@
