run $(MAKE) check in the fixinc directory when autogen is present
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@51368 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_1-branch/gcc/Makefile.in
+++ b/gcc-3_1-branch/gcc/Makefile.in
@@ -2876,11 +2876,16 @@ site.exp: ./config.status Makefile
 		-e '1,/^## All variables above are.*##/ d' >> site.exp
 	-@rm -f ./tmp?
 
-CHECK_TARGETS = check-gcc @check_languages@
+CHECK_TARGETS = check-gcc check-fixinc @check_languages@
 
 check-c++ : check-g++
 check-f77 : check-g77
 check-java :
+
+check-fixinc :
+	if (autogen --ver=v) > /dev/null 2>&1 ; \
+	then cd fixinc && $(MAKE) check ; \
+	else true ; fi
 
 check: $(CHECK_TARGETS)
 
